--- a/dotnetcore-sample/.travis.yml
+++ b/dotnetcore-sample/.travis.yml
@@ -1,19 +1,7 @@
-# YAML build definition for this app
-# This file is needed only when you want to model your build definitions using YAML
-steps:
-- script: |
-    dotnet restore
-    dotnet build
-    dotnet test dotnetcore-tests/dotnetcore-tests.csproj
-    dotnet publish -o $(Build.ArtifactStagingDirectory)
-
-- task: archiveFiles@1
-  inputs:
-    rootFolder: $(Build.ArtifactStagingDirectory)
-    archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-
-- task: publishBuildArtifacts@1
-  inputs:
-    PathtoPublish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
-    ArtifactName: drop
-    ArtifactType: Container
+﻿language: CSharp
+install:
+  - curl -sSL https://raw.githubusercontent.com/aspnet/Home/master/kvminstall.sh | sh && source ~/.k/kvm/kvm.sh
+  - kvm upgrade
+  - kpm restore --no-cache
+script:
+  - k test -parallel none
