--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-language: csharp
-dist: trusty
+language: csharp  
 mono: none
-dotnet: 1.0.1
-install:
+dotnet: 2.0.0
+dist: trusty
+sudo: false
+solution: dotnetcore-sample.sln
+script: 
 - dotnet restore
-script:
 - dotnet build
