--- a/dotnetcore-tests/dotnetcore-tests.csproj
+++ b/dotnetcore-tests/dotnetcore-tests.csproj
@@ -5,14 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.2" />
-    <PackageReference Include="Microsoft.UnitTestFramework.Extensions" Version="1.0.0.3" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="1.1.11" />
+    <PackageReference Include="MSTest.TestFramework" Version="1.1.11" />
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="dotnetcore-sample">
-      <HintPath>..\dotnetcore-sample\bin\Debug\netcoreapp2.0\dotnetcore-sample.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\dotnetcore-sample\dotnetcore-sample.csproj" />
   </ItemGroup>
 
   <ItemGroup>
